--- a/.env
+++ b/.env
@@ -42,3 +42,7 @@ CORS_ALLOW_ORIGIN='^https?://(localhost|127\.0\.0\.1)(:[0-9]+)?$'
 ###> symfony/mailer ###
 # MAILER_DSN=null://null
 ###< symfony/mailer ###
+
+###> horeca/middleware-client-bundle ###
+HORECA_BASE_URL=
+###< horeca/middleware-client-bundle ###
