--- a/config/packages/doctrine.yaml
+++ b/config/packages/doctrine.yaml
@@ -10,11 +10,12 @@ doctrine:
         naming_strategy: doctrine.orm.naming_strategy.underscore_number_aware
         auto_mapping: true
         mappings:
-            App:
+            Horeca\MiddlewareClientBundle:
                 is_bundle: false
+                type: annotation
                 dir: '%kernel.project_dir%/src/Entity'
-                prefix: 'App\Entity'
-                alias: App
+                prefix: 'Horeca\MiddlewareClientBundle\Entity'
+                alias: HorecaMiddlewareClientBundle
 
 when@test:
     doctrine:
