Define entity mapping using php 8 attributes

--- a/config/packages/doctrine.yaml
+++ b/config/packages/doctrine.yaml
@@ -12,7 +12,7 @@ doctrine:
         mappings:
             Horeca\MiddlewareClientBundle:
                 is_bundle: false
-                type: annotation
+                type: attribute
                 dir: '%kernel.project_dir%/src/Entity'
                 prefix: 'Horeca\MiddlewareClientBundle\Entity'
                 alias: HorecaMiddlewareClientBundle
