Implementation data flow

--- a/.env
+++ b/.env
@@ -34,7 +34,7 @@ CORS_ALLOW_ORIGIN='^https?://(localhost|127\.0\.0\.1)(:[0-9]+)?$'
 
 ###> symfony/messenger ###
 # Choose one of the transports below
-# MESSENGER_TRANSPORT_DSN=doctrine://default
+MESSENGER_TRANSPORT_DSN=doctrine://default
 # MESSENGER_TRANSPORT_DSN=amqp://guest:guest@localhost:5672/%2f/messages
 # MESSENGER_TRANSPORT_DSN=redis://localhost:6379/messages
 ###< symfony/messenger ###
@@ -44,5 +44,9 @@ CORS_ALLOW_ORIGIN='^https?://(localhost|127\.0\.0\.1)(:[0-9]+)?$'
 ###< symfony/mailer ###
 
 ###> horeca/middleware-client-bundle ###
-HORECA_BASE_URL=
+HORECA_BASE_URL="The horeca backend URL"
+HORECA_API_KEY="The API key used to send requests to horeca backend"
+HORECA_SHARED_KEY="The API key horeca backend uses to send requests to middleware api"
+HORECA_MIDDLEWARE_CLIENT_ID="The middleware client id configured in horeca backend. Used to send requests to horeca backend"
+HORECA_ENABLE_REQUEST_EXCEPTION_LOGGING=true
 ###< horeca/middleware-client-bundle ###
