--- a/config/services.yaml
+++ b/config/services.yaml
@@ -28,17 +28,19 @@ services:
     # add more service definitions when explicit configuration is needed
     # please note that last definitions always *replace* previous ones
 
-    Horeca\MiddlewareCommonLib\Service\HorecaApiInterface:
-        class: Horeca\MiddlewareCommonLib\Service\HorecaApiService
-        calls:
-            - [ setBaseUrl, [ '%horeca.base_url%' ] ]
-            - [ setApiKey, [ '%horeca.api_key%' ] ]
-            - [ setMiddlewareClientId, [ '%horeca.middleware_client_id%' ] ]
-
-    Horeca\MiddlewareClientBundle\EventListener\RequestListener:
-        tags:
-            - { name: kernel.event_listener, event: kernel.request, method: onKernelRequest }
-            - { name: kernel.event_listener, event: kernel.response, method: onKernelResponse }
-            - { name: kernel.event_listener, event: kernel.exception, method: onKernelException }
-        calls:
-            - [ enableRequestExceptionLogging, [ '%horeca.enable_request_exception_logging%' ] ]
+#    Horeca\MiddlewareCommonLib\Service\HorecaApiInterface:
+#        class: Horeca\MiddlewareCommonLib\Service\HorecaApiService
+#        arguments:
+#            - '@jms_serializer'
+#        calls:
+#            - [ setBaseUrl, [ '%horeca.base_url%' ] ]
+#            - [ setApiKey, [ '%horeca.api_key%' ] ]
+#            - [ setMiddlewareClientId, [ '%horeca.middleware_client_id%' ] ]
+#
+#    Horeca\MiddlewareClientBundle\EventListener\RequestListener:
+#        tags:
+#            - { name: kernel.event_listener, event: kernel.request, method: onKernelRequest }
+#            - { name: kernel.event_listener, event: kernel.response, method: onKernelResponse }
+#            - { name: kernel.event_listener, event: kernel.exception, method: onKernelException }
+#        calls:
+#            - [ enableRequestExceptionLogging, [ '%horeca.enable_request_exception_logging%' ] ]
