Fix service config

--- a/src/Resources/config/services.yaml
+++ b/src/Resources/config/services.yaml
@@ -17,6 +17,7 @@ services:
             - [ setMiddlewareClientId, [ '%env(resolve:HORECA_MIDDLEWARE_CLIENT_ID)%' ] ]
 
     horeca.request_listener:
+        class: Horeca\MiddlewareClientBundle\EventListener\RequestListener
         tags:
             - { name: kernel.event_listener, event: kernel.request, method: onKernelRequest }
             - { name: kernel.event_listener, event: kernel.response, method: onKernelResponse }
