Fix service config

--- a/src/Resources/config/services.yaml
+++ b/src/Resources/config/services.yaml
@@ -1,9 +1,6 @@
 parameters:
-#    horeca.base_url: '%env(resolve:HORECA_BASE_URL)%'
     horeca.api_key: '%env(resolve:HORECA_API_KEY)%'
-#    horeca.shared_key: '%env(resolve:HORECA_SHARED_KEY)%'
-#    horeca.middleware_client_id: '%env(resolve:HORECA_MIDDLEWARE_CLIENT_ID)%'
-#    horeca.enable_request_exception_logging: '%env(resolve:HORECA_ENABLE_REQUEST_EXCEPTION_LOGGING)%'
+    horeca.enable_request_exception_logging: '%env(resolve:HORECA_ENABLE_REQUEST_EXCEPTION_LOGGING)%'
 
 services:
 
