--- a/src/Resources/config/services.yaml
+++ b/src/Resources/config/services.yaml
@@ -12,6 +12,8 @@ services:
             - [ setBaseUrl, [ '%env(resolve:HORECA_BASE_URL)%' ] ]
             - [ setApiKey, [ '%env(resolve:HORECA_API_KEY)%' ] ]
             - [ setMiddlewareClientId, [ '%env(resolve:HORECA_MIDDLEWARE_CLIENT_ID)%' ] ]
+        autowire: true
+        autoconfigure: true
 
     horeca.request_listener:
         class: Horeca\MiddlewareClientBundle\EventListener\RequestListener
@@ -21,3 +23,5 @@ services:
             - { name: kernel.event_listener, event: kernel.exception, method: onKernelException }
         calls:
             - [ enableRequestExceptionLogging, [ '%horeca.enable_request_exception_logging%' ] ]
+        autowire: true
+        autoconfigure: true
