--- a/src/Resources/config/services.yaml
+++ b/src/Resources/config/services.yaml
@@ -3,8 +3,23 @@ parameters:
     horeca.enable_request_exception_logging: '%env(resolve:HORECA_ENABLE_REQUEST_EXCEPTION_LOGGING)%'
 
 services:
+    _defaults:
+        autowire: true      # Automatically injects dependencies in your services.
+        autoconfigure: true # Automatically registers your services as commands, event subscribers, etc.
 
-    horeca.api_client:
+    Horeca\MiddlewareClientBundle\:
+        resource: '../../'
+        exclude:
+            - '../../DependencyInjection/'
+            - '../../Entity/'
+            - '../../Resources/'
+            - '../../Exception/'
+            - '../../Message/'
+            - '../../DataFixtures/'
+            - '../../Kernel.php'
+            - '../../HorecaMiddlewareClientBundle.php'
+
+    Horeca\MiddlewareCommonLib\Service\HorecaApiInterface:
         class: Horeca\MiddlewareCommonLib\Service\HorecaApiService
         arguments:
             - '@jms_serializer'
@@ -12,16 +27,11 @@ services:
             - [ setBaseUrl, [ '%env(resolve:HORECA_BASE_URL)%' ] ]
             - [ setApiKey, [ '%env(resolve:HORECA_API_KEY)%' ] ]
             - [ setMiddlewareClientId, [ '%env(resolve:HORECA_MIDDLEWARE_CLIENT_ID)%' ] ]
-        autowire: true
-        autoconfigure: true
 
-    horeca.request_listener:
-        class: Horeca\MiddlewareClientBundle\EventListener\RequestListener
+    Horeca\MiddlewareClientBundle\EventListener\RequestListener:
         tags:
             - { name: kernel.event_listener, event: kernel.request, method: onKernelRequest }
             - { name: kernel.event_listener, event: kernel.response, method: onKernelResponse }
             - { name: kernel.event_listener, event: kernel.exception, method: onKernelException }
         calls:
             - [ enableRequestExceptionLogging, [ '%horeca.enable_request_exception_logging%' ] ]
-        autowire: true
-        autoconfigure: true
