--- a/src/Resources/config/services.yaml
+++ b/src/Resources/config/services.yaml
@@ -27,6 +27,8 @@ services:
             - [ setBaseUrl, [ '%env(resolve:HORECA_BASE_URL)%' ] ]
             - [ setApiKey, [ '%env(resolve:HORECA_API_KEY)%' ] ]
             - [ setMiddlewareClientId, [ '%env(resolve:HORECA_MIDDLEWARE_CLIENT_ID)%' ] ]
+        autowire: true
+        autoconfigure: true
 
     Horeca\MiddlewareClientBundle\EventListener\RequestListener:
         tags:
@@ -35,3 +37,6 @@ services:
             - { name: kernel.event_listener, event: kernel.exception, method: onKernelException }
         calls:
             - [ enableRequestExceptionLogging, [ '%horeca.enable_request_exception_logging%' ] ]
+        autowire: true
+        autoconfigure: true
+
