--- a/composer.json
+++ b/composer.json
@@ -85,7 +85,10 @@
         "auto-scripts": {
             "cache:clear": "symfony-cmd",
             "assets:install %PUBLIC_DIR%": "symfony-cmd"
-        }
+        },
+        "post-install-cmd": [
+            "Horeca\\MiddlewareClientBundle\\Composer\\ComposerScripts::postInstall"
+        ]
     },
     "extra": {
         "symfony": {
