WIP composer post install script

--- a/composer.json
+++ b/composer.json
@@ -88,6 +88,9 @@
         },
         "post-install-cmd": [
             "Horeca\\MiddlewareClientBundle\\Composer\\ComposerScripts::postInstall"
+        ],
+        "post-update-cmd": [
+            "Horeca\\MiddlewareClientBundle\\Composer\\ComposerScripts::postUpdate"
         ]
     },
     "extra": {
