Fix controller config

--- a/src/Resources/config/services.yaml
+++ b/src/Resources/config/services.yaml
@@ -5,6 +5,10 @@ parameters:
 
 services:
 
+    Horeca\MiddlewareClientBundle\Controller\:
+        resource: '../../Controller/'
+        tags: [ 'controller.service_arguments' ]
+
     Horeca\MiddlewareCommonLib\Service\HorecaApiInterface:
         class: Horeca\MiddlewareCommonLib\Service\HorecaApiService
         arguments:
