--- a/src/Resources/config/services.yaml
+++ b/src/Resources/config/services.yaml
@@ -1,22 +1,28 @@
 parameters:
-#    horeca.api_key: '%env(resolve:HORECA_API_KEY)%'
-#    horeca.enable_request_exception_logging: '%env(resolve:HORECA_ENABLE_REQUEST_EXCEPTION_LOGGING)%'
-#    horeca.order_notification_messenger_transport: 'hmc_order_notification'
+    horeca.base_url: '%env(resolve:HORECA_BASE_URL)%'
+    horeca.api_key: '%env(resolve:HORECA_API_KEY)%'
+    horeca.shared_key: '%env(resolve:HORECA_SHARED_KEY)%'
+    horeca.middleware_client_id: '%env(resolve:HORECA_MIDDLEWARE_CLIENT_ID)%'
+    horeca.enable_request_exception_logging: '%env(resolve:HORECA_ENABLE_REQUEST_EXCEPTION_LOGGING)%'
 
 services:
 
-    Horeca\MiddlewareClientBundle\Controller\:
-        resource: '../../Controller/'
-        tags: [ 'controller.service_arguments' ]
+    Horeca\MiddlewareClientBundle\Controller\HorecaApiController:
+        calls:
+            - [ setLogger,[ '@logger' ] ]
+            - [ setSerializer,[ '@jms_serializer' ] ]
+            - [ setMessageBus,[ '@messenger.bus.default' ] ]
+            - [ setEntityManager,[ '@doctrine.orm.entity_manager' ] ]
+        public: true
 
     Horeca\MiddlewareCommonLib\Service\HorecaApiInterface:
         class: Horeca\MiddlewareCommonLib\Service\HorecaApiService
         arguments:
             - '@jms_serializer'
         calls:
-            - [ setBaseUrl, [ '%env(resolve:HORECA_BASE_URL)%' ] ]
-            - [ setApiKey, [ '%env(resolve:HORECA_API_KEY)%' ] ]
-            - [ setMiddlewareClientId, [ '%env(resolve:HORECA_MIDDLEWARE_CLIENT_ID)%' ] ]
+            - [ setBaseUrl, [ '%horeca.base_url%' ] ]
+            - [ setApiKey, [ '%horeca.api_key%' ] ]
+            - [ setMiddlewareClientId, [ '%horeca.middleware_client_id%' ] ]
 
     Horeca\MiddlewareClientBundle\Service\RequestService:
         arguments:
