--- a/composer.json
+++ b/composer.json
@@ -31,6 +31,7 @@
         "nelmio/cors-bundle": "^2.2",
         "phpdocumentor/reflection-docblock": "^5.2",
         "ramsey/uuid": "^4.2",
+        "ramsey/uuid-doctrine": "^1.8|^2.0",
         "sensio/framework-extra-bundle": "^6.2",
         "symfony/asset": "^5.4",
         "symfony/console": "^5.4",
