--- a/composer.json
+++ b/composer.json
@@ -26,7 +26,7 @@
         "doctrine/orm": "^2.10.0",
         "friendsofsymfony/rest-bundle": "^3.1",
         "guzzlehttp/guzzle": "^7.4",
-        "horeca/middleware-common-lib": "dev-develop",
+        "horeca/middleware-common-lib": "^1.0.2",
         "jms/serializer-bundle": "^4.0",
         "nelmio/cors-bundle": "^2.2",
         "phpdocumentor/reflection-docblock": "^5.2",
