--- a/composer.json
+++ b/composer.json
@@ -19,62 +19,23 @@
         "ext-iconv": "*",
         "ext-json": "*",
         "ext-openssl": "*",
-        "composer/package-versions-deprecated": "^1.11",
-        "doctrine/annotations": "^1.0",
         "doctrine/doctrine-bundle": "^2.1",
-        "doctrine/doctrine-migrations-bundle": "^3.0",
-        "doctrine/orm": "^2.10.0",
-        "friendsofsymfony/rest-bundle": "^3.1",
-        "guzzlehttp/guzzle": "^7.4",
+        "doctrine/orm": "^2.10",
+        "guzzlehttp/guzzle": "^6.2 || ^7.0",
         "horeca/middleware-common-lib": "dev-develop",
-        "jms/serializer-bundle": "^4.0",
-        "nelmio/cors-bundle": "^2.2",
-        "phpdocumentor/reflection-docblock": "^5.2",
+        "jms/serializer": "^3.10",
         "ramsey/uuid": "^4.2",
-        "ramsey/uuid-doctrine": "^1.8|^2.0",
-        "sensio/framework-extra-bundle": "^6.2",
-        "symfony/asset": "^5.4",
-        "symfony/console": "^5.4",
-        "symfony/dotenv": "^5.4",
-        "symfony/expression-language": "^5.4",
-        "symfony/flex": "^1.3.1",
-        "symfony/form": "^5.4",
-        "symfony/framework-bundle": "^5.4",
-        "symfony/http-client": "^5.4",
-        "symfony/http-foundation": "^5.4",
-        "symfony/intl": "^5.4",
-        "symfony/mailer": "^5.4",
+        "ramsey/uuid-doctrine": "^1.8",
+        "symfony/framework-bundle": "^5.0 || ^6.2",
+        "symfony/http-foundation": "^5.0 || ^6.2",
         "symfony/messenger": "^5.4",
-        "symfony/mime": "^5.4",
-        "symfony/monolog-bundle": "^3.1",
-        "symfony/notifier": "^5.4",
-        "symfony/process": "^5.4",
-        "symfony/property-access": "^5.4",
-        "symfony/property-info": "^5.4",
-        "symfony/proxy-manager-bridge": "^5.4",
-        "symfony/security-bundle": "^5.4",
-        "symfony/string": "^5.4",
-        "symfony/translation": "^5.4",
-        "symfony/twig-bundle": "^5.1",
-        "symfony/validator": "^5.4",
-        "symfony/web-link": "^5.4",
-        "symfony/yaml": "^5.4",
-        "twig/extra-bundle": "^2.12|^3.0",
-        "twig/twig": "^2.12|^3.0",
-        "symfony/runtime": "^5.4"
+        "symfony/validator": "^5.0 || ^6.2",
+        "symfony/yaml": "^5.0 || ^6.2"
     },
     "require-dev": {
-        "behat/behat": "^3.10",
-        "dama/doctrine-test-bundle": "^6.6",
         "doctrine/doctrine-fixtures-bundle": "^3.4",
-        "friends-of-behat/symfony-extension": "^2.2",
-        "jetbrains/phpstorm-attributes": "^1.0",
         "phpunit/phpunit": "^9.5",
-        "symfony/browser-kit": "^5.1",
-        "symfony/maker-bundle": "^1.36",
-        "symfony/phpunit-bridge": "^5.1",
-        "symfony/stopwatch": "^5.1",
-        "symfony/web-profiler-bundle": "^5.1"
+        "symfony/phpunit-bridge": "^5.1"
     },
     "repositories": [
         {
