services updated added TaskRepository as a service

--- a/Resources/config/services.yaml
+++ b/Resources/config/services.yaml
@@ -17,6 +17,10 @@ services:
         tags:
             - { name: doctrine.repository_service }
 
+    Horeca\MiddlewareClientBundle\Repository\TaskRepository:
+        tags:
+            - { name: doctrine.repository_service }
+
     Horeca\MiddlewareClientBundle\Controller\HorecaApiController:
         tags: [ 'controller.service_arguments' ]
 
