--- a/Resources/config/services.yaml
+++ b/Resources/config/services.yaml
@@ -44,6 +44,8 @@ services:
 
     Horeca\MiddlewareClientBundle\Service\OrderLogger:
 
+    Horeca\MiddlewareClientBundle\Service\MappingLogger:
+
     Horeca\MiddlewareClientBundle\Service\TenantClientFactoryInterface:
         class: Horeca\MiddlewareClientBundle\Service\TenantClientFactory
 
